# CwAPI3D.Integration.Test

./: .clang-format  .gitignore  CMakeLists.txt  Logger.cpp  Logger.h  README.md  cwapi3d.test.controller.cpp  cwapi3d.test.controller.h  cwapi3d.test.library.cpp  cwapi3d.test.utils.cpp  elementControllerIT.cpp  elementControllerIT.h  library.cpp
.github/workflows/: ci.yml  main.yml  release.yml
CwApi3d/includes/: CwAPI3DTypes.h  ICwAPI3DSceneController.h  ICwAPI3DTextObjectOptions.h  ICwAPI3DUtilityController.h
src/: SpdlogWrapper.cpp  SpdlogWrapper.h  cwapi3d_spdlog_wrapper.cpp  cwapi3d_spdlog_wrapper.h  cwapi3d_test_controller.cpp  cwapi3d_test_controller.h  cwapi3d_test_library.cpp  cwapi3d_test_utils.cpp  cwapi3d_test_utils.h
src/CwApi3d/includes/: CwAPI3D.h  CwAPI3DTypes.h  CwAPI3DVersion.h  ICwAPI3DAttributeController.h  ICwAPI3DCameraData.h  ICwAPI3DCoordinateSystemData.h  ICwAPI3DElementController.h  ICwAPI3DEndtypeIDList.h  ICwAPI3DGeometryController.h  ICwAPI3DIfcOptions.h  ICwAPI3DIfcPredefinedType.h  ICwAPI3DImport3dcOptions.h  ICwAPI3DSceneController.h  ICwAPI3DUtilityController.h
src/resources/: static-symbol.3dc
